# WP_AI

./: .gitignore  Caddyfile  ConoHa WINGへのSSH接続コマンドは以下の通りです：.txt  Launch_WP_AI_GUI.bat  README.md  README_startup.md  WP Doctor AI システム統合マスター詳細設計仕様書.md  aichat.bat  config.toml  diagnose.bat  docker-compose.yml  fix_start_bat.py  handover.md  quick_start.bat  requirements.txt  setup_api_key.bat  start_wp-ai.bat  start_wp-ai.bat.old  start_wp-ai.ps1  start_wp-ai.sh  system_info.bat  メモ
.agent/rules/: wpai.md
plugins/wpdoctor-api/: wpdoctor-api.php
wp-ai/: config.toml  pyproject.toml  set_api_key.py
wp-ai/wp_ai/: api.py  auth.py  config.py  context.py  llm.py  main.py  prompts.py  runner.py  ssh.py
wp-ai/wp_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wp-ai/wp_ai/gui/: __init__.py  chat_window.py  dialogs.py  history_window.py  implementation_plan.md.resolved  launcher.py  planner_window.py  task.md  utils.py  widgets.py  wp_ai_gui_specification.md.resolved
保存倉庫/: WPDoctorAI_plugin_endpoints_example.php  WP_AI_詳細設計仕様書.md  wp-ai_別アプリ_詳細設計仕様書.md
